fix bug overflow table

--- a/src/@sirio/styles/partials/_utilities.scss
+++ b/src/@sirio/styles/partials/_utilities.scss
@@ -180,6 +180,7 @@ blockquote {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  max-width: auto;
 }
 
 
